feat: добавить превью объявления вывода
